# automake-demo

./: .gitignore  Makefile.am  configure.ac
scripts/: build-ios.sh  clear.sh
src/: Makefile.am
src/ModuleA/apple/core/: Makefile.am
src/ModuleA/apple/shell/: Makefile.am
src/hello_autoconf/: Makefile.am  main.cc
src/hello_autoconf/demo/: Makefile.am  rw_lock_demo.cc  rw_lock_demo.h
src/hello_autoconf/utils/: Makefile.am  swap.cc  swap.h  utils.am
src/lib/: Makefile.am
test/: Makefile.am  test_rw_lock_demo.cc
